allow to attach screenshot to PRD
