# internal/coordinator/gen/models/attachment_input.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+	"github.com/go-openapi/validate"
+)
+
+// AttachmentInput an evidence image (e.g. a bug screenshot) submitted with a PRD
+//
+// swagger:model AttachmentInput
+type AttachmentInput struct {
+
+	// raw image bytes, base64-encoded
+	// Required: true
+	// Format: byte
+	Data *strfmt.Base64 `json:"data"`
+
+	// filename
+	// Required: true
+	Filename *string `json:"filename"`
+
+	// one of: image/png, image/jpeg, image/gif, image/webp
+	// Required: true
+	MediaType *string `json:"mediaType"`
+}
+
+// Validate validates this attachment input
+func (m *AttachmentInput) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateData(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateFilename(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMediaType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AttachmentInput) validateData(formats strfmt.Registry) error {
+
+	if err := validate.Required("data", "body", m.Data); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AttachmentInput) validateFilename(formats strfmt.Registry) error {
+
+	if err := validate.Required("filename", "body", m.Filename); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AttachmentInput) validateMediaType(formats strfmt.Registry) error {
+
+	if err := validate.Required("mediaType", "body", m.MediaType); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this attachment input based on context it is used
+func (m *AttachmentInput) ContextValidate(_ context.Context, _ strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AttachmentInput) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AttachmentInput) UnmarshalBinary(b []byte) error {
+	var res AttachmentInput
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
